@@ -10,6 +10,7 @@ import os.path
 
 from lpbuildd.pottery import intltool
 from lpbuildd.target.operation import Operation
+from lpbuildd.target.vcs import VCSOperationMixin
 
 
 logger = logging.getLogger(__name__)
@@ -19,7 +20,7 @@ RETCODE_FAILURE_INSTALL = 200
 RETCODE_FAILURE_BUILD = 201
 
 
-class GenerateTranslationTemplates(Operation):
+class GenerateTranslationTemplates(VCSOperationMixin, Operation):
     """Script to generate translation templates from a branch."""
 
     description = "Generate templates for a branch."
@@ -28,42 +29,24 @@ class GenerateTranslationTemplates(Operation):
     def add_arguments(cls, parser):
         super(GenerateTranslationTemplates, cls).add_arguments(parser)
         parser.add_argument(
-            "branch_spec", help=(
-                "A branch URL or the path of a local branch.  URLs are "
-                "recognised by the occurrence of ':'.  In the case of a URL, "
-                "this will make up a path for the branch and check out the "
-                "branch to there."))
-        parser.add_argument(
             "result_name",
-            help="The name of the result tarball.  Should end in '.tar.gz'.")
+            help="the name of the result tarball; should end in '.tar.gz'")
 
     def __init__(self, args, parser):
         super(GenerateTranslationTemplates, self).__init__(args, parser)
         self.work_dir = os.environ["HOME"]
+        self.branch_dir = os.path.join(self.work_dir, "source-tree")
 
-    def _getBranch(self):
-        """Set `self.branch_dir`, and check out branch if needed."""
-        if ':' in self.args.branch_spec:
-            # This is a branch URL.  Check out the branch.
-            self.branch_dir = os.path.join(self.work_dir, 'source-tree')
-            logger.info("Getting remote branch %s..." % self.args.branch_spec)
-            self._checkout(self.args.branch_spec)
-        else:
-            # This is a local filesystem path.  Use the branch in-place.
-            logger.info("Using local branch %s..." % self.args.branch_spec)
-            self.branch_dir = self.args.branch_spec
+    def install(self):
+        logger.info("Installing dependencies...")
+        deps = ["intltool"]
+        deps.extend(self.vcs_deps)
+        self.backend.run(["apt-get", "-y", "install"] + deps)
 
-    def _checkout(self, branch_url):
-        """Check out a source branch to generate from.
-
-        The branch is checked out to the location specified by
-        `self.branch_dir`.
-        """
-        logger.info(
-            "Exporting branch %s to %s..." % (branch_url, self.branch_dir))
-        self.backend.run(
-            ["bzr", "export", "-q", "-d", branch_url, self.branch_dir])
-        logger.info("Exporting branch done.")
+    def fetch(self, quiet=False):
+        logger.info("Fetching %s...", self.vcs_description)
+        self.vcs_fetch(
+            os.path.basename(self.branch_dir), cwd=self.work_dir, quiet=quiet)
 
     def _makeTarball(self, files):
         """Put the given files into a tarball in the working directory."""
@@ -78,21 +61,23 @@ class GenerateTranslationTemplates(Operation):
         self.backend.run(cmd)
         logger.info("Tarball generated.")
 
+    def generate(self):
+        logger.info("Generating templates...")
+        pots = intltool.generate_pots(self.backend, self.branch_dir)
+        logger.info("Generated %d templates." % len(pots))
+        if len(pots) > 0:
+            self._makeTarball(pots)
+
     def run(self):
         """Do It.  Generate templates."""
         try:
-            self.backend.run(["apt-get", "-y", "install", "bzr", "intltool"])
+            self.install()
         except Exception:
             logger.exception("Install failed")
             return RETCODE_FAILURE_INSTALL
         try:
-            logger.info(
-                "Generating templates for %s." % self.args.branch_spec)
-            self._getBranch()
-            pots = intltool.generate_pots(self.backend, self.branch_dir)
-            logger.info("Generated %d templates." % len(pots))
-            if len(pots) > 0:
-                self._makeTarball(pots)
+            self.fetch()
+            self.generate()
         except Exception:
             logger.exception("Build failed")
             return RETCODE_FAILURE_BUILD
